--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
   ],
   "scripts": {
     "build": "tsc --build tsconfig.json",
-    "prepublishOnly": "git push && git push --tags && npm run build",
+    "prepublishOnly": "git push --follow-tags && npm run build",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "repository": {
